k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: event-ticketing
  labels:
    app.kubernetes.io/part-of: event-ticketing
    istio-injection: disabled
